Add openapi docs for stripe APIs
